// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`convertRoomPlanToSvg > matches snapshot for CapturedStructure 1`] = `
"<?xml version="1" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-0.5 -0.5 4 4" width="4" height="4">
  <rect x="-0.5" y="-0.5" width="4" height="4" fill="#ffffff" />
  <g fill="none" stroke="#000000" stroke-width="0.05" stroke-linecap="square">
    <line x1="0" y1="0" x2="3" y2="0" />
    <line x1="0" y1="3" x2="0" y2="0" />
    <line x1="0" y1="3" x2="3" y2="3" />
  </g>
</svg>"
`;

exports[`convertRoomPlanToSvg > matches snapshot for L-shape room 1`] = `
"<?xml version="1" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-0.5 -0.5 6 4" width="6" height="4">
  <rect x="-0.5" y="-0.5" width="6" height="4" fill="#ffffff" />
  <g fill="none" stroke="#000000" stroke-width="0.05" stroke-linecap="square">
    <line x1="0" y1="0" x2="5" y2="0" />
    <line x1="5" y1="3" x2="5" y2="0" />
    <line x1="3" y1="3" x2="5" y2="3" />
  </g>
</svg>"
`;

exports[`convertRoomPlanToSvg > matches snapshot for curved wall room 1`] = `
"<?xml version="1" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-2.5 -0.93 5.18 3.61" width="5.18" height="3.61">
  <rect x="-2.5" y="-0.93" width="5.18" height="3.61" fill="#ffffff" />
  <g fill="none" stroke="#000000" stroke-width="0.05" stroke-linecap="square">
    <line x1="-2" y1="0" x2="0" y2="0" />
    <line x1="0" y1="2" x2="0" y2="0" />
    <path d="M 2.18 -0.43 A 2 2 0 1 1 -0.43 2.18" />
  </g>
</svg>"
`;

exports[`convertRoomPlanToSvg > matches snapshot for rectangle room 1`] = `
"<?xml version="1" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-0.5 -0.5 5 4" width="5" height="4">
  <rect x="-0.5" y="-0.5" width="5" height="4" fill="#ffffff" />
  <g fill="none" stroke="#000000" stroke-width="0.05" stroke-linecap="square">
    <line x1="0" y1="0" x2="4" y2="0" />
    <line x1="0" y1="3" x2="4" y2="3" />
    <line x1="0" y1="3" x2="0" y2="0" />
    <line x1="4" y1="3" x2="4" y2="0" />
  </g>
</svg>"
`;

exports[`convertRoomPlanToSvg > matches snapshot for rectangle with opening 1`] = `
"<?xml version="1" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-0.5 -0.5 5 4" width="5" height="4">
  <rect x="-0.5" y="-0.5" width="5" height="4" fill="#ffffff" />
  <g fill="none" stroke="#000000" stroke-width="0.05" stroke-linecap="square">
    <line x1="0" y1="0" x2="4" y2="0" />
    <line x1="0" y1="3" x2="4" y2="3" />
    <line x1="0" y1="3" x2="0" y2="0" />
    <line x1="4" y1="3" x2="4" y2="0" />
  </g>
</svg>"
`;
